spacing fixed -- outline buttons still a bit strange

--- a/frontend/src/components/css/Landing.css
+++ b/frontend/src/components/css/Landing.css
@@ -7,7 +7,6 @@
   gap: 0;
   flex-wrap: wrap;
   z-index: 0;
-  margin-top: 5%;
 
 }
 
