--- a/frontend/src/pages/css/Shop.css
+++ b/frontend/src/pages/css/Shop.css
@@ -18,7 +18,11 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    flex-direction: column;
+   
 }
+
+
 
 .filter-button-holder {
     width: 45%;
